--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:text": "textlint \"./{articles,books}/*.md\" -f pretty-error",
+    "lint:text:fix": "textlint \"./{articles,books}/*.md\" --fix"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +16,8 @@
     "textlint-rule-preset-ja-spacing": "^2.3.0",
     "textlint-rule-preset-ja-technical-writing": "^7.0.0",
     "zenn-cli": "^0.1.144"
+  },
+  "devDependencies": {
+    "textlint": "^13.3.3"
   }
 }
